# Case-Indicium

./: .env.example  .gitignore  README.md  docker-compose.yml  dockerfile  entrypoint.sh  pyproject.toml  read_tecnico.MD  run_etl.py
.streamlit/: config.toml
data/: srag.duckdb.wal
data/raw/: data_urls.json
notebooks/: bronze_eda.ipynb  eda.ipynb  gold_eda.ipynb  silver_eda.ipynb
scripts/: run_bronze.py  run_gold.py  run_pipeline  run_report.py  run_silver.py  test_llm.py
src/case_indicium/agent/: charting.py  generator.py  intent_router.py  llm_router.py  metrics.py  metrics_registry.py  news_client.py  prompt.py  queries.py  schemas.py  settings.py  sql_client.py  tools.py
src/case_indicium/etl/: bronze_ingest.py  etl.py  silver_build.py  urls.py
src/case_indicium/sql/: gold_views.sql  sanity.sql
src/case_indicium/templates/: report.md.j2
src/case_indicium/utils/: ckan.py  config.py  duck.py  io.py
src/case_indicium/webapp/: app.py
